@@ -12,6 +12,7 @@ R_PAPERSIZE=${R_PAPERSIZE-'@R_PAPERSIZE@'}
 R_PRINTCMD=${R_PRINTCMD-'@R_PRINTCMD@'}
 ## Default TeXMF stuff
 R_LATEXCMD=${R_LATEXCMD-${LATEX-'@LATEX@'}}
+R_PDFLATEXCMD=${R_PDFLATEXCMD-${PDFLATEX-'@PDFLATEX@'}}
 R_DVIPSCMD=${R_DVIPSCMD-${DVIPS-'@DVIPS@'}}
 R_MAKEINDEXCMD=${R_MAKEINDEX-${MAKEINDEX-'@MAKEINDEX@'}}
 R_RD4DVI=${R_RD4DVI-'@R_RD4DVI@'}
