@@ -15,6 +15,7 @@ R_PAPERSIZE_USER=${R_PAPERSIZE}
 R_PAPERSIZE=${R_PAPERSIZE-'a4'}
 ## Default TeXMF stuff
 R_LATEXCMD=${R_LATEXCMD-${LATEX-'latex'}}
+R_PDFLATEXCMD=${R_PDFLATEXCMD-${PDFLATEX-'pdflatex'}}
 R_DVIPSCMD=${R_DVIPSCMD-${DVIPS-'dvips'}}
 R_MAKEINDEXCMD=${R_MAKEINDEX-${MAKEINDEX-'makeindex'}}
 R_RD4DVI=${R_RD4DVI-'ae'}
